--- a/Flask/templates/newMain.html
+++ b/Flask/templates/newMain.html
@@ -9,6 +9,8 @@
     <!-- Bootstrap -->
     <link href="/static/bootstrap.min.css" rel="stylesheet">
     <script src="/static/bootstrap.min.css"></script>
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+
 
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -21,71 +23,220 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="http://code.highcharts.com/stock/highstock.src.js"></script>
     <script src="http://code.highcharts.com/stock/modules/exporting.js"></script>
-<script src="/static/d3.js"></script>
-<script src="/static/app-cloud.js"></script>
- <script src="/static/d3.layout.cloud.js"></script>
+
   </head>
-    <body>
-    <div class="jumbotron">
-      <h2>Market Sentiment Analysis</h1>
+  
+  <body>
+    <div class="page-header">
+      <h1>Market Sentiment Analysis</h1>
     </div>
 
+    <div role="tabpanel">
 
-<ul class="nav nav-pills">
-  <li role="presentation" class="active"><a href="#">Home</a></li>
-  <li role="presentation"><a href="#">Charts</a></li>
-  <li role="presentation"><a href="#">Twitter Trends</a></li>
-</ul>
+    <!-- Nav tabs -->
+    <ul class="nav nav-tabs" role="tablist" id="myTab">
+      <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Home</a></li>
+      <li role="presentation"><a href="#charts" aria-controls="profile" role="tab" data-toggle="tab">Charts</a></li>
+      <li role="presentation"><a href="#trends" aria-controls="messages" role="tab" data-toggle="tab">Trends</a></li>
+    </ul>
 
+    <!-- Tab panes -->
+    <div class="tab-content">
+      <div role="tabpanel" class="tab-pane active" id="home">
+        Home Page
+      </div>
+      <div role="tabpanel" class="tab-pane" id="charts">
+        Charts Page
+      </div>
+      <div role="tabpanel" class="tab-pane" id="trends">
+            <div id="container" style="height: 400px; min-width: 310px"></div>                
+      </div>
+    </div>
 
-    <div id="responsecontainer" style="height: 400px; min-width: 310px"></div>
-
-    <div id="candleStickContainer" style="height: 400px; min-width: 310px"></div>
+</div>
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    
-    
-<script type='text/javascript' src="http://netdna.bootstrapcdn.com/twitter-bootstrap/3.0.3/js/bootstrap.min.js"></script>
-
-  </body>
-
-
-
-  <script>
-    $(document).ready(
-            function() {
-                setInterval(function() {
-                    var randomnumber = Math.floor(Math.random() * 100);
-                    $('#show').text(
-                            'I am getting refreshed every 3 seconds..! Random Number ==> '
-                                    + randomnumber);
-                }, 3000);
-            });
-</script>
-
-
-        <script type="text/javascript">
-          $(function () {
-            setInterval(function () {
-        
-        $.ajax({
-          url: "http://localhost:5000/liveStreaming",
-        }).done(function(data) {
-          $('#responsecontainer').html(data);
-        });
-
-    
-
-            }, 1000);
-          })
-        </script>
-
-
-
+    <script type='text/javascript' src="http://netdna.bootstrapcdn.com/twitter-bootstrap/3.0.3/js/bootstrap.min.js"></script>
+    <script src="/static/d3.js"></script>
+    <script src="/static/d3.layout.cloud.js"></script>
 <script>
+$(document).ready(function() {
+  /* */
+
+  $('#myTab a[href="#home"]').click(function (e) {
+
+
+
+    alert('Home Clicked');
+    e.preventDefault()
+    $(this).tab('show')
+  });
+
+  $('#myTab a[href="#charts"]').click(function (e) {
+
+    e.preventDefault()
+    $(this).tab('show')
+  });
+
+  $('#myTab a[href="#trends"]').click(function (e) {
+
+    // Fetch the data from URL
+    // Call the refresh_twitter_trends
+    e.preventDefault()
+    $(this).tab('show')
+  });
+
+  var refresh_twitter_trends = function(data) {
+    // create the chart
+    $('#container').highcharts('StockChart', {
+
+           rangeSelector : {
+                buttons : [
+                {
+                    type : 'minute',
+                    count : 5,
+                    text : '5m'
+                },
+                {
+                    type : 'minute',
+                    count : 30,
+                    text : '30m'
+                },
+                {
+                    type : 'hour',
+                    count : 1,
+                    text : '1h'
+                },
+                 {
+                    type : 'minute',
+                    count : 225,
+                    text : 'TD'
+                }, 
+
+                 {
+                    type : 'day',
+                    count : 1,
+                    text : '1D'
+                }, 
+                {
+                    type : 'day',
+                    count : 7,
+                    text : '1W'
+                }, 
+                {
+                    type : 'Month',
+                    count : 1,
+                    text : '1M'
+                },     
+                {
+                    type : 'all',
+                    count : 1,
+                    text : 'All'
+                }],
+                selected : 1,
+                inputEnabled : false
+            },
+
+            title : {
+                text : text
+            },
+
+            
+
+            yAxis: [{
+                labels: {
+                    align: 'right',
+                    x: -3
+                },
+                title: {
+                    text: 'Price'
+                },
+                height: '60%',
+                lineWidth: 2
+            }, {
+                labels: {
+                    align: 'right',
+                    x: -3
+                },
+                title: {
+                    text: 'Tweets Counts'
+                },
+                top: '65%',
+                height: '35%',
+                offset: 0,
+                lineWidth: 2
+            }],
+
+           series: [{
+                type: 'candlestick',
+                name: text,
+                data: data,
+         
+            }, {
+                type: 'column',
+                name: 'Tweets Counts',
+                data: tweets,
+                yAxis: 1,
+      
+            }];
+            
+    });
+  }
+
+  var refresh_data = function() {
+    $.ajax({
+      type:"GET",
+      url:'/liveStreaming1',
+      success:function(d) {
+        draw_data(d.data);
+      },
+      fail: function() {
+        alert('call failed');
+      }
+    });
+  };
+  setInterval(refresh_data, 500);
+  var draw_data = function(data) {
+    var colors = d3.scale.category10();
+
+    var frequency_list = data;
+    var fill = d3.scale.category20();
+    d3.layout.cloud().size([800, 800])
+      .words(frequency_list.map(function(d) { return d}))
+      .padding(2)
+      .rotate(function() { return ~~(Math.random() * 2) * 90; })
+      .font("Impact")
+      .fontSize(function(d) { return d.size; })
+      .on("end", draw)
+      .start();
+  function draw(words) {
+    console.log(words);
+    d3.select("body").append("svg")
+        .attr("width", 1000)
+        .attr("height", 1000)
+      .append("g")
+        .attr("transform", "translate(400,400)")
+      .selectAll("text")
+        .data(words)
+      .enter().append("text")
+        .style("font-size", function(d) { return Math.round(d.size/4) + "px"; })
+        .style("font-family", "Impact")
+        .style("fill", function(d, i) { return fill(i); })
+        .attr("text-anchor", "middle")
+        .attr("transform", function(d) {
+          return "translate(" + [d.x, d.y] + ")rotate(" + d.rotate + ")";
+        })
+        .text(function(d) { return d.text; });
+  };
+
+
+
+  };
+});
+/*
 var colors = d3.scale.category10();
 
 var frequency_list = {{data|safe}}; 
@@ -107,7 +258,7 @@ var frequency_list = {{data|safe}};
       .selectAll("text")
         .data(words)
       .enter().append("text")
-        .style("font-size", function(d) { return d.size*2.5 + "px"; })
+        .style("font-size", function(d) { return d.size*0.7 + "px"; })
         .style("font-family", "Impact")
         .style("fill", function(d, i) { return fill(i); })
           .style("fill", function(d, i) { return colors(i); })
@@ -117,6 +268,31 @@ var frequency_list = {{data|safe}};
         })
         .text(function(d) { return d.text; });
   }
+*/
 </script>
+
+    <script type="text/javascript">
+      google.load("visualization", "1", {packages:["corechart"]});
+      google.setOnLoadCallback(drawChart);
+      function drawChart() {
+       var data = google.visualization.arrayToDataTable([
+             ['Element', 'Density', { role: 'style' }],
+             ['Copper', 8.94, '#b87333'],            // RGB value
+             ['Silver', 10.49, 'silver'],            // English color name
+             ['Gold', 19.30, 'gold'],
+             ['Platinum', 21.45, 'color: #e5e4e2' ], // CSS-style declaration
+          ]);
+
+        var options = {
+          title: 'Company Performance',
+          vAxis: {title: 'Year',  titleTextStyle: {color: 'red'}}
+        };
+
+        var chart = new google.visualization.BarChart(document.getElementById('chart_div'));
+
+        chart.draw(data, options);
+      }
+    </script>
+  </body>
 
 </html>
